# prodigy-iaa

./: LICENSE  README.md  pyproject.toml
src/prodigy_iaa/: __init__.py  measures.py  processors.py  recipe.py  render.py
tests/: conftest.py  test_measures.py  test_recipes.py
