[tool.poetry]
name = "prodigy-iaa"
version = "0.1.1"
description = ""
authors = ["Peter Baumgartner <5107405+pmbaumgartner@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "prodigy_iaa", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
pandas = "^1.4.0"
pytest = "^7.2.0"
black = "^22.10.0"
isort = "^5.10.1"
srsly = "^2.4.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."prodigy_recipes"]
"iaa.datasets" = "prodigy_iaa.recipe:iaa_datasets"
"iaa.sessions" = "prodigy_iaa.recipe:iaa_jsonl"
"iaa.jsonl" = "prodigy_iaa.recipe:iaa_jsonl"